# imoveis_api

./: .coverage  .dockerignore  .gitignore  Dockerfile  docker-compose.yml  entrypoint.sh  fly.toml  pyproject.toml
.github/workflows/: pipeline.yaml
imoveis_api/: app.py  database.py  models.py  schemas.py  security.py  settings.py
imoveis_api/routers/: auth.py  properties.py  users.py
migrations/: env.py
migrations/versions/: 74c3e7c0df48_create_users_table.py  80252665d7fb_criação_da_tabela_users.py
tests/: conftest.py  factories.py  test_app.py  test_auth.py  test_properties.py  test_security.py  test_users.py
